styles.css
@font-face {
    font-family: "Jungle Fever";
    src: url("fonts/JungleFeverNF.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Poppins";
    src: url("fonts/Poppins-Regular.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Poppins Bold";
    src: url("fonts/Poppins-Bold.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: "Poppins";
}

.no-scroll {
    overflow: hidden;
    height: 100vh;
    touch-action: none;
}

html, body {
    overscroll-behavior: none;
    height: 100%;
}

nav {
    display: flex;
    justify-content: space-between;
    background-color: rgb(94, 230, 79);
    box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.2);
    border-bottom: 2px solid rgb(255, 246, 74);
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    z-index: 10;
    transition: all 0.3s ease;
    padding: 5px;
}

nav.shrink {
    padding: 0px;
}

.nav-link {
    text-decoration: none;
    color: white;
    font-size: 1.1rem;
    font-weight: 500;
}

.nav-links li {
    list-style-type: none;
}

.nav-links {
    margin-top: 45px;
    margin-left: -30px;
    display: flex;
    flex-direction: column;
    height: 0px;
    width: 100%;
    overflow: hidden;
    background-color: rgb(94, 230, 79);
    transition: height 0.2s ease-in-out;
    z-index: 2;
}

.nav-links.active {
    height: 90px;
}

.menu-icon {
    height: 30px;
    width: 30px;
    background: none;
    border: none;
    margin-left: 10px;
    margin-top: 7px;
    transition: transform 0.15s ease-in-out;
}

.menu-icon.active {
    transform: rotate(180deg);
}

.ixchel-logo-container {
    display: flex;
    margin: 5px 10px;
}

.ixchel-logo {
    font-family: "Jungle Fever";
}

.ix-container, .chel-container {
    display: flex;
}

.chel-container {
    margin-left: -2px;
}

.ix-container h1, .chel-container h1 {
    padding: 0px 3px;
}

.i-text {
    color: aqua;
}

.x-text {
    color: rgb(255, 246, 74);
}
.c-text {
    color: rgb(249, 102, 235);
}
.h-text {
    color: aqua;
}
.e-text {
    color: rgb(255, 246, 74);
}
.l-text {
    color: rgb(249, 102, 235);
}

.i-text, .x-text, .c-text, .h-text, .e-text, .l-text {
    font-size: 2rem;
}

.about-text {
    font-family: "Poppins";
}

.slider-container {
    width: 105%;
    height: 400px;
    overflow: hidden;
    position: relative;
    margin-bottom: 25px;
    margin-top: 49.5px;
}

@keyframes zoomPan{ 
    0% {
        transform: scale(1) translate(0, 0);
    }
    100% {
        transform: scale(1.05) translate(7px, 2px)
    }
}
@keyframes zoomPan2{ 
    0% {
        transform: scale(1) translate(0, 0);
    }
    100% {
        transform: scale(1.015) translate(-20px, 3px)
    }
}
@keyframes zoomPan3{ 
    0% {
        transform: scale(1) translate(0, 0);
    }
    100% {
        transform: scale(1.035) translate(-8.5px, 2px)
    }
}

.slider-img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: absolute;
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
    /* animation: zoomPan 4s ease-in-out forwards; */
}

.storefront-summer {
    object-position: 70% center;
}

.storefront-winter {
    object-position: 5% center;
}

.slider-img.active{
    opacity: 1;
    
}

.scroll-left-btn, .scroll-right-btn {
    height: 30px;
}

.scroll-left-btn, .scroll-right-btn {
    background: none;
    border: none;
    width: 50px;
}

.chevron-container-left {
    position: absolute;
    left: 10px;
    top: 170px;
    width: fit-content;
    height: fit-content;
}

.chevron-container-right {
    position: absolute;
    right: 10px;
    top: 170px;
    width: fit-content;
    height: fit-content;
}

.left-chevron, .right-chevron {
    height: 30px;
    width: 30px;
}

.section-border {
    height: 2px;
    background-color: rgb(94, 230, 79);
    width: 90%;
    margin: 10px auto;
}

.selection-section .section-border {
    height: 2px;
    background-color: rgb(94, 230, 79);
    width: 90%;
    margin: 10px auto 25px;
   
}

.about-us-title, .selection-title, .welcome-title {
    text-align: center;
    font-family: "Poppins Bold";
    margin-top: -10px;
    margin-bottom: -10px;
    color: rgb(249, 102, 235);
}

.about-us-text {
    width: 90%;
    margin: 20px auto 35px;
    color:rgb(0, 129, 6)
}
.showcase-img-container {
    width: 95%;
    margin: 10px auto;
    height: 400px;
    overflow: hidden;
    border-radius: 5px;
}

.showcase-image {
    position: relative;
    width: 150%;
    height: 100%;
    transform: translateX(-25%);
    transition: transform 0.2s ease-out;
    object-fit: cover;
}

#beauty-products.showcase-image {
    position: relative;
    width: 150%;
    height: 100%;
    object-fit: cover;
    transform: translateX(-25%);
    transition: transform 0.2s ease-out;
}

#come-in.showcase-img-container {
    height: 150px;
    margin: 25px auto;
}

#come-in.showcase-image {
    object-position: 25px -230px;
}

.selection-section h3, .map-h3 {
    text-align: center;
    font-family: "Poppins Bold";
    margin-top: -10px;
    margin-bottom: -10px;
    color: rgb(249, 102, 235);
}

.map-container {
    height: 400px;
    width: 95%;
    border-radius: 5px;
    margin: 10px auto;
    margin-bottom: 50px;
}

footer {
    background-color: rgb(94, 230, 79);
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.ixchel-footer-logo-container {
    display: flex;
    margin-top: 15px;
    margin-left: 10px;
}

.social-icons-container {
    margin-left: 15px;
    margin-top: 10px;
    height: 30px;
}

.ixchel-footer-logo-container h1 {
    font-size: 1.3rem;
    font-family: "Jungle Fever";
}

.footer-logo-socials-container {
    margin-left: 10px;
}

.footer-text-container {
    display: flex;
    flex-direction: column;
    padding: 10px;
    margin-right: 10px;
}

.address-text {
    font-family: "Poppins";
    color: white;
    font-size: 0.8rem;
}

.social-icons-container img{
    height: 30px;
    width: 30px;
}

.fb-btn, .ig-btn {
    background: none;
    border: none;
    width: 30px;
    height: 30px;
    /* margin-left: 8px; */
}

.fb-link, .ig-link {
    display: inline-block;
    width: 30px;
    height: 30px;
    margin-bottom: 10px;
    margin-left: 5px;
}

.modal-container {
    display: none;
    position: fixed;
    top: 0;
    bottom: 0;
    overflow: hidden;
    border-radius: 5px;
    width: 95%;
    height: 400px;
    margin: auto;
    margin-left: 2.5%;
}

.modal-container.active {
    display: block;
    z-index: 20;
}

.modal-img-track-container {
    height: 100%;
    width: fit-content;
    display: flex;
    transition: transform 0.3s ease-out;
    gap: 1px;
    z-index: 19;
    overflow: hidden;
}

.modal-image-container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 95vw;
    overflow: hidden;
}

.modal-image {
    height: 100%;
    object-fit: cover;
    flex-shrink: 0;
}

.overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.65);
    z-index: 15;
}

.overlay.active {
    display: block;
}

/* MEDIA QUERIES BEGIN BELOW */

@media (max-width: 375px) {
    #come-in.showcase-image {
        object-position: 25px -200px;
    }
}

@media (min-width: 480px) {
    #come-in.showcase-image {
        object-position: 25px -270px;
    }
}

